# Neural-Network

Neural Network/: CMakeLists.txt
Neural Network/Math/: Math.h  Vector.h
Neural Network/NN/: NeuralNetwork.h  Neuron.h
Neural Network/src/: main.cpp
